# lux

./: .gitignore  .luaurc  Cargo.toml  LICENSE  README.md  build.bat  install.ps1  test.bat
.github/workflows/: ci.yml  release.yml
.lux/types/: base64.luau  ffi.luau  fs.luau  process.luau  runservice.luau
crates/lux/: Cargo.toml  build.rs
crates/lux-base64/: Cargo.toml
crates/lux-base64/src/: lib.rs
crates/lux-color/: Cargo.toml  types.d.luau
crates/lux-color/src/: lib.rs
crates/lux-datetime/: Cargo.toml  types.d.luau
crates/lux-datetime/src/: lib.rs
crates/lux-enum/: Cargo.toml  types.d.luau
crates/lux-enum/src/: lib.rs
crates/lux-ffi/: Cargo.toml
crates/lux-ffi/src/: batch.rs  call.rs  callback.rs  lib.rs  memory.rs  parser.rs  registry.rs  types.rs
crates/lux-fs/: Cargo.toml
crates/lux-fs/src/: lib.rs  metadata.rs
crates/lux-luau/: Cargo.toml  types.d.luau
crates/lux-luau/src/: lib.rs
crates/lux-noise/: Cargo.toml  types.d.luau
crates/lux-noise/src/: lib.rs
crates/lux-process/: Cargo.toml
crates/lux-process/src/: lib.rs
crates/lux-process/src/create/: child.rs
crates/lux-process/src/exec/: mod.rs
crates/lux-process/src/options/: mod.rs
crates/lux-regex/: Cargo.toml  types.d.luau
crates/lux-regex/src/: lib.rs
crates/lux-serde/: Cargo.toml  types.d.luau
crates/lux-serde/src/: compress_decompress.rs  encode_decode.rs  lib.rs
crates/lux-signal/: Cargo.toml  types.d.luau
crates/lux-signal/src/: lib.rs
crates/lux-std/: Cargo.toml
crates/lux-std/src/: global.rs  lib.rs  library.rs
crates/lux-std/src/globals/: datetime.rs  mod.rs  print.rs  require.rs  roblox_types.rs  script.rs  task.rs  version.rs  warn.rs
crates/lux-std/src/require/: loader.rs  resolver.rs
crates/lux-stdio/: Cargo.toml  types.d.luau
crates/lux-stdio/src/: lib.rs  style_and_color.rs
crates/lux-task/: Cargo.toml  types.d.luau
crates/lux-task/src/: lib.rs
crates/lux-udim/: Cargo.toml  types.d.luau
crates/lux-udim/src/: lib.rs
crates/lux-utils/: Cargo.toml
crates/lux-utils/src/: version_string.rs
crates/lux-utils/src/fmt/: label.rs
crates/lux-uuid/: Cargo.toml  types.d.luau
crates/lux-uuid/src/: lib.rs
crates/lux-vector/: Cargo.toml  types.d.luau
crates/lux-vector/src/: lib.rs
crates/lux/src/: lib.rs  main.rs  tests.rs
crates/lux/src/cli/: build.rs  check.rs  list.rs  mod.rs  repl.rs  run.rs  setup.rs
crates/lux/src/cli/utils/: files.rs  listing.rs
crates/lux/src/rt/: result.rs  runtime.rs
crates/lux/src/standalone/: metadata.rs  mod.rs
crates/lux/wix/: License.rtf  main.wxs
crates/mlua-luau-scheduler/: Cargo.toml
tests/: ffi_test_suite.luau  run_all.luau
tests/api/: test_base64.luau  test_color.luau  test_datetime.luau  test_enum.luau  test_fs.luau  test_noise.luau  test_process.luau  test_regex.luau  test_serde.luau  test_signal.luau  test_std_misc.luau  test_stdio.luau  test_task.luau  test_udim.luau  test_uuid.luau  test_vector.luau
tests/ffi/: test_ffi_advanced.luau  test_ffi_core.luau
tests/globals/: test_core.luau
tests/manual/: logging_full.luau  logging_verify.luau
tests/stress/: test_loop_alloc.luau
