[package]
name = "lux-datetime"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lux-runtime/lux"
description = "Roblox-compatible DateTime library for Lux"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luau"] }
lux-utils = { version = "0.1.0", path = "../lux-utils" }
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
] }
