[package]
name = "lux-fs"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lux-runtime/lux"
description = "Lux standard library - FS"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luau"] }

async-fs = "2.1"
bstr = "1.9"
futures-lite = "2.6"
chrono = "0.4"

lux-utils = { version = "0.1.0", path = "../lux-utils" }
