[package]
name = "lux-luau"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lux-runtime/lux"
description = "Lux standard library - Luau"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luau", "luau-jit"] }

lux-utils = { version = "0.1.0", path = "../lux-utils" }
