[package]
name = "lux-serde"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lux-runtime/lux"
description = "Lux standard library - Serde"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luau", "serialize", "error-send"] }

async-compression = { version = "0.4", features = [
    "futures-io",
    "brotli",
    "deflate",
    "gzip",
    "zlib",
    "zstd",
] }

blocking = "1.6"
bstr = "1.9"
futures-lite = "2.6"
lz4 = "1.26"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml2 = "0.1.3"
jsonc-parser = { version = "0.26", features = ["serde"] }
toml = { version = "0.9", features = ["preserve_order"] }

digest = "0.10.7"
hmac = "0.12.1"
md-5 = "0.10.6"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
blake3 = { version = "=1.5.0", features = ["traits-preview"] }

lux-utils = { version = "0.1.0", path = "../lux-utils" }
