[package]
name = "lux-signal"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lux-runtime/lux"
description = "GoodSignal - High-performance signal/event system for Lux"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luau"] }
lux-utils = { version = "0.1.0", path = "../lux-utils" }
parking_lot = "0.12"
