[package]
name = "lux-stdio"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lux-runtime/lux"
description = "Lux standard library - Stdio"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luau", "error-send"] }
mlua-luau-scheduler = { version = "0.2.3", path = "../mlua-luau-scheduler" }

async-io = "2.4"
async-lock = "3.4"
blocking = "1.6"
dialoguer = "0.12"
futures-lite = "2.6"

lux-utils = { version = "0.1.0", path = "../lux-utils" }
