[package]
name = "lux-task"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lux-runtime/lux"
description = "Roblox-compatible task scheduling library for Lux"

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.4", features = ["luau"] }
lux-utils = { version = "0.1.0", path = "../lux-utils" }
mlua-luau-scheduler = { path = "../mlua-luau-scheduler" }
async-io = "2"
futures-lite = "2"
