[package]
name = "lux"
version = "0.1.0"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/lux-runtime/lux"
description = "Lux - The Micro-Kernel Luau Runtime with Native FFI"
readme = "../../README.md"
keywords = ["cli", "lua", "luau", "runtime", "ffi"]
categories = ["command-line-interface"]
authors = ["Lux Runtime Team <team@lux-runtime.org>"]

[[bin]]
name = "lux"
path = "src/main.rs"

[lib]
name = "lux"
path = "src/lib.rs"

[features]
default = ["std", "cli"]

std-fs = ["dep:lux-std", "lux-std/fs"]
std-luau = ["dep:lux-std", "lux-std/luau"]
std-process = ["dep:lux-std", "lux-std/process"]
std-regex = ["dep:lux-std", "lux-std/regex"]
std-serde = ["dep:lux-std", "lux-std/serde"]
std-stdio = ["dep:lux-std", "lux-std/stdio"]
std-ffi = ["dep:lux-std", "lux-std/ffi"]
std-signal = ["dep:lux-std", "lux-std/signal"]

std = [
    "std-fs",
    "std-luau",
    "std-process",
    "std-regex",
    "std-serde",
    "std-stdio",
    "std-ffi",
    "std-signal",
]

cli = ["dep:clap", "dep:rustyline", "dep:zip"]

[lints]
workspace = true

[dependencies]
mlua = { version = "0.11.5", features = ["luau-jit"] }
mlua-luau-scheduler = { version = "0.2.3", path = "../mlua-luau-scheduler" }

anyhow = "1.0"
console = "0.16"
dialoguer = "0.12"
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

async-io = "2.4"
async-fs = "2.1"
blocking = "1.6"
futures-lite = "2.6"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

lux-std = { optional = true, version = "0.1.0", path = "../lux-std" }
lux-utils = { version = "0.1.0", path = "../lux-utils" }

### CLI

clap = { optional = true, version = "4.1", features = ["derive"] }
rustyline = { optional = true, version = "17.0" }
zip = { optional = true, version = "5.1", default-features = false, features = [
    "bzip2",
    "deflate",
    "deflate64",
    "zstd",
] }

[build-dependencies]
winres = "0.1.12"
